syntax = "proto3";

package price_service;

option go_package = "./gen/protos";

service PriceService {
  rpc GetPrice (ItemsPriceRequest) returns (ItemsPriceResponce) {}
  rpc GetAvailability (ItemsPriceRequest) returns (ItemsAvailabilityResponce) {}
}

message ItemsPriceRequest{
  int32 item_id = 1;
}

message ItemsPriceResponce{
  int32 item_id = 1;
  float price = 2;
}

message ItemsAvailabilityResponce{
  int32 item_id = 1;
  int32 count = 2;
  string mdate = 3;
  string cdate = 4;
}
